--- a/freelance-frontend/package.json
+++ b/freelance-frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@stacks/auth": "^7.3.0",
     "@stacks/connect": "^8.2.3",
+    "@stacks/connect-ui": "^8.1.1",
     "@stacks/network": "^7.2.0",
     "@stacks/transactions": "^7.3.0",
     "framer-motion": "^12.23.26",
